--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 }
 
 html, body{
-height: 100%;
-width: 100%;
-
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 #nav{
@@ -17,24 +17,25 @@ width: 100%;
     width: 100%;
     /* background-color: red ; */
     display: flex;
-    padding: 0 150px;
-    gap: 50px;
+    padding: 0 20px;
+    gap: 20px;
     position: fixed;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     z-index: 99;
 }
 #nav img{
-    height: 75px;
+    height: 50px;
 }
 
 #nav h4{
     text-transform: uppercase;
     font-weight: 500;
+    font-size: 14px;
 }
 #curser{
-   height: 25px;
-   width: 25px;
+   height: 20px;
+   width: 20px;
     background-color: green;
     border-radius: 50%;
     position: fixed;
@@ -73,7 +74,7 @@ background-color: rgba(0, 0, 0, 0.37);
   
 }
 #page-1 h1 {
-    font-size: 140px;
+    font-size: 60px;
     font-weight: 900;
     position: relative;
    
@@ -82,20 +83,20 @@ background-color: rgba(0, 0, 0, 0.37);
     content: "EAT. DRINK. PLAY.";
     position: absolute;
     color: black;
-   top: -4px;
-   left: -4px;
+   top: -2px;
+   left: -2px;
    -webkit-text-stroke: 1px white;
    z-index: -1;
 }
 #page-1 h2{
-    font-size: 32px;
+    font-size: 24px;
     font-weight:900 ;
     margin-top: 10px;
     margin-bottom: 20px;
   
 }
 #page-1 h3{
-    font-size: 15px;
+    font-size: 12px;
     font-weight: 500;
 }
 #page-2{
@@ -128,12 +129,12 @@ background-color: rgba(0, 0, 0, 0.37);
 #scroller h4{
     display: inline-block;
     white-space: nowrap;
-    font-size: 102px;
+    font-size: 40px;
     font-family: gilroy;
     font-weight: 700;
     transition: all linear 0.3s;
     color: transparent;
-    -webkit-text-stroke: 2px #95c11e;
+    -webkit-text-stroke: 1px #95c11e;
 }
 #scroller h4:hover{
     color: #95c11e;
@@ -147,48 +148,49 @@ background-color: rgba(0, 0, 0, 0.37);
     }
 }
 #about-us{
-    height: 40vh;
+    height: auto;
     width: 100%;
     /* background-color:  red; */
     display: flex;
-    padding: 0 50px;
+    flex-direction: column;
+    padding: 0 20px;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
    
 }
 #about-us img{
-    height: 300px;
-    width: 250px;
+    height: auto;
+    max-width: 100%;
     border-radius: 20px;
     object-fit: cover;
+    margin-bottom: 20px;
 }
 #about-us-in{
-    width: 50%;
+    width: 100%;
     text-align: center;
 }
 #about-us-in h3{
-   font-size: 50px;
+   font-size: 30px;
    font-weight: 700;
-   margin-bottom: 30px;
+   margin-bottom: 20px;
 }
 #about-us-in p{
-    font-size: 20px;
-    line-height: 26px;
+    font-size: 16px;
+    line-height: 22px;
 }
 #card-container{
     /* background-color: red; */
-    height: 40vh;
+    height: auto;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
-    gap: 70px;
-background-size: cover;
-background-position: center;
-
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
 }
 .cards{
-    height: 80%;
-    width: 25%;
+    height: 200px;
+    width: 100%;
     background-color: #95c11e;
     border-radius: 20px;
     overflow: hidden;
@@ -216,23 +218,22 @@ background-position: center;
     height: 100%;
     width: 100%;
     background-color: #95c11e;
-    padding: 50px;
-    padding-top: 80px;
+    padding: 20px;
     opacity: 0;
     transition: all ease 0.6s;
     
 }
 .overlay h4{
     color: black;
-    font-size: 30px;
+    font-size: 20px;
     text-transform: uppercase;
     font-weight: 800;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     
 }
 .overlay p{
     color: black    ;  
-    font-size: 18px; 
+    font-size: 14px; 
     font-weight: 500;
 }
 .cards:hover .overlay{
@@ -242,27 +243,106 @@ background-position: center;
     transform: rotate3d(1,1,0,20deg);
 }
 #green-div{
-    height: 30vh;
-
-    /* background-color: #000; */
+    height: auto;
     background: linear-gradient(to left bottom, #95c11e, #000);
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    padding: 20px;
 }
 #green-div h4{
-    width: 50%;
-    line-height: 40px;
+    width: auto;
+    line-height: 30px;
     text-align: center;
-    font-size: 23px;
-    font-weight: 50%;
-    /* color: black; */
+    font-size: 18px;
+    font-weight: 500;
     text-transform: uppercase;
+    margin: 0 20px;
 }
 #green-div img{
-    height: 100%;
+    height: 50px;
     object-fit: cover;
-    width: 14%;
+    width: 50px;
+    margin: 0;
+}
+
+/* Media queries for further responsiveness */
+@media (min-width: 768px) {
+    #nav {
+        padding: 0 50px;
+        gap: 30px;
+    }
+
+    #nav img {
+        height: 60px;
+    }
+
+    #nav h4 {
+        font-size: 16px;
+    }
+
+    #page-1 h1 {
+        font-size: 80px;
+    }
+
+    #page-1 h2 {
+        font-size: 28px;
+    }
+
+    #page-1 h3 {
+        font-size: 14px;
+    }
+
+    #scroller h4 {
+        font-size: 60px;
+    }
+
+    #about-us {
+        flex-direction: row;
+    }
+
+    #about-us img {
+        height: 250px;
+        width: 200px;
+    }
+
+    #about-us-in {
+        width: 50%;
+    }
+
+    #about-us-in h3 {
+        font-size: 40px;
+    }
+
+    #about-us-in p {
+        font-size: 18px;
+    }
+
+    #card-container {
+        flex-direction: row;
+        gap: 30px;
+    }
+
+    .cards {
+        height: 250px;
+        width: 30%;
+    }
+
+    .overlay h4 {
+        font-size: 24px;
+    }
+
+    .overlay p {
+        font-size: 16px;
+    }
+
+    #green-div h4 {
+        font-size: 20px;
+    }
+
+    #green-div img {
+        height: 70px;
+        width: 70px;
+    }
 }
 
